Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-logging-json-config-group-additional-field-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-logging-json-config-group-additional-field-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-05-12 02:42+0000\n"
+"POT-Creation-Date: 2022-05-13 02:52+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -53,12 +53,14 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-logging-json-config-group-additional-field-config.adoc:17
+#: upstream/_generated-config/main/config/quarkus-logging-json-config-group-additional-field-config.adoc:36
 #, no-wrap
 msgid "string"
 msgstr "string"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-logging-json-config-group-additional-field-config.adoc:20
+#: upstream/_generated-config/main/config/quarkus-logging-json-config-group-additional-field-config.adoc:39
 #, no-wrap
 msgid "required icon:exclamation-circle[title=Configuration property is required]"
 msgstr ""
@@ -77,12 +79,38 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-logging-json-config-group-additional-field-config.adoc:27
+#: upstream/_generated-config/main/config/quarkus-logging-json-config-group-additional-field-config.adoc:46
 #, no-wrap
 msgid "`string`, `int`, `long`"
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-logging-json-config-group-additional-field-config.adoc:29
+#: upstream/_generated-config/main/config/quarkus-logging-json-config-group-additional-field-config.adoc:30
+#: upstream/_generated-config/main/config/quarkus-logging-json-config-group-additional-field-config.adoc:48
 #, no-wrap
 msgid "`string`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-logging-json-config-group-additional-field-config.adoc:35
+#, no-wrap
+msgid ""
+"[[quarkus-logging-json-config-group-additional-field-config_quarkus.log.file.json.additional-field.-field-name-.value]]`link:#quarkus-logging-json-config-group-additional-field-config_quarkus.log.file.json.additional-field.-field-name-.value[quarkus.log.file.json.additional-field.\"field-name\".value]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Additional field value.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-logging-json-config-group-additional-field-config.adoc:44
+#, no-wrap
+msgid ""
+"[[quarkus-logging-json-config-group-additional-field-config_quarkus.log.file.json.additional-field.-field-name-.type]]`link:#quarkus-logging-json-config-group-additional-field-config_quarkus.log.file.json.additional-field.-field-name-.type[quarkus.log.file.json.additional-field.\"field-name\".type]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Additional field type specification. Supported types: string, int, long String is the default if not specified.\n"
+"--"
 msgstr ""
