--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-logging-json.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-logging-json.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-05-12 02:42+0000\n"
+"POT-Creation-Date: 2022-05-13 02:53+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -24,17 +24,19 @@ msgstr "icon:lock[title=ビルド時に固定] ビルド時に固定される設
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-logging-json.adoc:8
 #, no-wrap
-msgid "[[quarkus-logging-json_configuration]]link:#quarkus-logging-json_configuration[Configuration property]"
+msgid "[[quarkus-logging-json_quarkus.log.console-json-console-logging]]link:#quarkus-logging-json_quarkus.log.console-json-console-logging[Console logging]"
 msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-logging-json.adoc:9
+#: upstream/_generated-config/main/config/quarkus-logging-json.adoc:116
 #, no-wrap
 msgid "Type"
 msgstr "タイプ"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-logging-json.adoc:11
+#: upstream/_generated-config/main/config/quarkus-logging-json.adoc:118
 #, no-wrap
 msgid "Default"
 msgstr "デフォルト"
@@ -55,12 +57,16 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-logging-json.adoc:17
 #: upstream/_generated-config/main/config/quarkus-logging-json.adoc:26
 #: upstream/_generated-config/main/config/quarkus-logging-json.adoc:73
+#: upstream/_generated-config/main/config/quarkus-logging-json.adoc:124
+#: upstream/_generated-config/main/config/quarkus-logging-json.adoc:133
+#: upstream/_generated-config/main/config/quarkus-logging-json.adoc:180
 #, no-wrap
 msgid "boolean"
 msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-logging-json.adoc:20
+#: upstream/_generated-config/main/config/quarkus-logging-json.adoc:127
 #, no-wrap
 msgid "`true`"
 msgstr "`true`"
@@ -80,6 +86,8 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-logging-json.adoc:29
 #: upstream/_generated-config/main/config/quarkus-logging-json.adoc:76
+#: upstream/_generated-config/main/config/quarkus-logging-json.adoc:136
+#: upstream/_generated-config/main/config/quarkus-logging-json.adoc:183
 #, no-wrap
 msgid "`false`"
 msgstr "`false`"
@@ -102,6 +110,11 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-logging-json.adoc:53
 #: upstream/_generated-config/main/config/quarkus-logging-json.adoc:82
 #: upstream/_generated-config/main/config/quarkus-logging-json.adoc:100
+#: upstream/_generated-config/main/config/quarkus-logging-json.adoc:142
+#: upstream/_generated-config/main/config/quarkus-logging-json.adoc:151
+#: upstream/_generated-config/main/config/quarkus-logging-json.adoc:160
+#: upstream/_generated-config/main/config/quarkus-logging-json.adoc:189
+#: upstream/_generated-config/main/config/quarkus-logging-json.adoc:207
 #, no-wrap
 msgid "string"
 msgstr "string"
@@ -109,6 +122,8 @@ msgstr "string"
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-logging-json.adoc:38
 #: upstream/_generated-config/main/config/quarkus-logging-json.adoc:56
+#: upstream/_generated-config/main/config/quarkus-logging-json.adoc:145
+#: upstream/_generated-config/main/config/quarkus-logging-json.adoc:163
 #, no-wrap
 msgid "`default`"
 msgstr ""
@@ -151,12 +166,14 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-logging-json.adoc:63
+#: upstream/_generated-config/main/config/quarkus-logging-json.adoc:170
 #, no-wrap
 msgid "`detailed`, `formatted`, `detailed-and-formatted`"
 msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-logging-json.adoc:66
+#: upstream/_generated-config/main/config/quarkus-logging-json.adoc:173
 #, no-wrap
 msgid "`detailed`"
 msgstr ""
@@ -200,6 +217,7 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-logging-json.adoc:91
+#: upstream/_generated-config/main/config/quarkus-logging-json.adoc:198
 #, fuzzy, no-wrap
 msgid "list of string"
 msgstr "string"
@@ -218,6 +236,7 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-logging-json.adoc:103
+#: upstream/_generated-config/main/config/quarkus-logging-json.adoc:210
 #, no-wrap
 msgid "required icon:exclamation-circle[title=Configuration property is required]"
 msgstr ""
@@ -236,12 +255,153 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-logging-json.adoc:110
+#: upstream/_generated-config/main/config/quarkus-logging-json.adoc:217
 #, no-wrap
 msgid "`string`, `int`, `long`"
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-logging-json.adoc:112
+#: upstream/_generated-config/main/config/quarkus-logging-json.adoc:113
+#: upstream/_generated-config/main/config/quarkus-logging-json.adoc:219
 #, fuzzy, no-wrap
 msgid "`string`"
 msgstr "string"
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-logging-json.adoc:115
+#, no-wrap
+msgid "[[quarkus-logging-json_quarkus.log.file-json-file-logging]]link:#quarkus-logging-json_quarkus.log.file-json-file-logging[File logging]"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-logging-json.adoc:123
+#, no-wrap
+msgid ""
+"[[quarkus-logging-json_quarkus.log.file.json]]`link:#quarkus-logging-json_quarkus.log.file.json[quarkus.log.file.json]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Determine whether to enable the JSON console formatting extension, which disables \"normal\" console formatting.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-logging-json.adoc:132
+#, no-wrap
+msgid ""
+"[[quarkus-logging-json_quarkus.log.file.json.pretty-print]]`link:#quarkus-logging-json_quarkus.log.file.json.pretty-print[quarkus.log.file.json.pretty-print]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Enable \"pretty printing\" of the JSON record. Note that some JSON parsers will fail to read pretty printed output.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-logging-json.adoc:141
+#, no-wrap
+msgid ""
+"[[quarkus-logging-json_quarkus.log.file.json.date-format]]`link:#quarkus-logging-json_quarkus.log.file.json.date-format[quarkus.log.file.json.date-format]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The date format to use. The special string \"default\" indicates that the default format should be used.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-logging-json.adoc:150
+#, no-wrap
+msgid ""
+"[[quarkus-logging-json_quarkus.log.file.json.record-delimiter]]`link:#quarkus-logging-json_quarkus.log.file.json.record-delimiter[quarkus.log.file.json.record-delimiter]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The special end-of-record delimiter to be used. By default, newline is used as delimiter.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-logging-json.adoc:159
+#, no-wrap
+msgid ""
+"[[quarkus-logging-json_quarkus.log.file.json.zone-id]]`link:#quarkus-logging-json_quarkus.log.file.json.zone-id[quarkus.log.file.json.zone-id]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The zone ID to use. The special string \"default\" indicates that the default zone should be used.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-logging-json.adoc:168
+#, no-wrap
+msgid ""
+"[[quarkus-logging-json_quarkus.log.file.json.exception-output-type]]`link:#quarkus-logging-json_quarkus.log.file.json.exception-output-type[quarkus.log.file.json.exception-output-type]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The exception output type to specify.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-logging-json.adoc:179
+#, no-wrap
+msgid ""
+"[[quarkus-logging-json_quarkus.log.file.json.print-details]]`link:#quarkus-logging-json_quarkus.log.file.json.print-details[quarkus.log.file.json.print-details]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Enable printing of more details in the log. \n"
+" Printing the details can be expensive as the values are retrieved from the caller. The details include the source class name, source file name, source method name and source line number.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-logging-json.adoc:188
+#, no-wrap
+msgid ""
+"[[quarkus-logging-json_quarkus.log.file.json.key-overrides]]`link:#quarkus-logging-json_quarkus.log.file.json.key-overrides[quarkus.log.file.json.key-overrides]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Override keys with custom values. Omitting this value indicates that no key overrides will be applied.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-logging-json.adoc:197
+#, no-wrap
+msgid ""
+"[[quarkus-logging-json_quarkus.log.file.json.excluded-keys]]`link:#quarkus-logging-json_quarkus.log.file.json.excluded-keys[quarkus.log.file.json.excluded-keys]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Keys to be excluded from the Json output.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-logging-json.adoc:206
+#, no-wrap
+msgid ""
+"[[quarkus-logging-json_quarkus.log.file.json.additional-field.-field-name-.value]]`link:#quarkus-logging-json_quarkus.log.file.json.additional-field.-field-name-.value[quarkus.log.file.json.additional-field.\"field-name\".value]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Additional field value.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-logging-json.adoc:215
+#, no-wrap
+msgid ""
+"[[quarkus-logging-json_quarkus.log.file.json.additional-field.-field-name-.type]]`link:#quarkus-logging-json_quarkus.log.file.json.additional-field.-field-name-.type[quarkus.log.file.json.additional-field.\"field-name\".type]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Additional field type specification. Supported types: string, int, long String is the default if not specified.\n"
+"--"
+msgstr ""
