--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-05-12 02:41+0000\n"
+"POT-Creation-Date: 2022-05-13 02:53+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -58,6 +58,10 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:46
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:60
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:89
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:205
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:214
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:223
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:250
 #, no-wrap
 msgid "boolean"
 msgstr "boolean"
@@ -65,6 +69,8 @@ msgstr "boolean"
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:20
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:63
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:226
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:253
 #, no-wrap
 msgid "`true`"
 msgstr "`true`"
@@ -84,6 +90,9 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:26
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:69
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:98
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:232
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:241
 #, no-wrap
 msgid "string"
 msgstr "string"
@@ -182,11 +191,323 @@ msgid ""
 "--"
 msgstr ""
 
-#~ msgid "int"
-#~ msgstr "int"
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:97
+#, no-wrap
+msgid ""
+"[[quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.url]]`link:#quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.url[quarkus.datasource.\"datasource-name\".jdbc.url]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The datasource URL\n"
+"--"
+msgstr ""
 
-#~ msgid "The format for durations uses the standard `java.time.Duration` format.  You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc]."
-#~ msgstr "期間のフォーマットは標準の `java.time.Duration` フォーマットを使用します。詳細は link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc] を参照してください。"
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:106
+#, no-wrap
+msgid ""
+"[[quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.initial-size]]`link:#quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.initial-size[quarkus.datasource.\"datasource-name\".jdbc.initial-size]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The initial size of the pool. Usually you will want to set the initial size to match at least the minimal size, but this is not enforced so to allow for architectures which prefer a lazy initialization of the connections on boot, while being able to sustain a minimal pool size after boot.\n"
+"--"
+msgstr ""
 
-#~ msgid "You can also provide duration values starting with a number.  In this case, if the value consists only of a number, the converter treats the value as seconds.  Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format."
-#~ msgstr "数値で始まる期間の値を指定することもできます。この場合、値が数値のみで構成されている場合、コンバーターは値を秒として扱います。そうでない場合は、 `PT` が暗黙的に値の前に付加され、標準の `java.time.Duration` 形式が得られます。"
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:107
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:116
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:125
+#, no-wrap
+msgid "int"
+msgstr "int"
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:115
+#, no-wrap
+msgid ""
+"[[quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.min-size]]`link:#quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.min-size[quarkus.datasource.\"datasource-name\".jdbc.min-size]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The datasource pool minimum size\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:119
+#, no-wrap
+msgid "`0`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:124
+#, no-wrap
+msgid ""
+"[[quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.max-size]]`link:#quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.max-size[quarkus.datasource.\"datasource-name\".jdbc.max-size]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The datasource pool maximum size\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:128
+#, no-wrap
+msgid "`20`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:134
+#, no-wrap
+msgid ""
+"[[quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.background-validation-interval]]`link:#quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.background-validation-interval[quarkus.datasource.\"datasource-name\".jdbc.background-validation-interval]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The interval at which we validate idle connections in the background. \n"
+" Set to `0` to disable background validation.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:136
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:146
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:156
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:166
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:176
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:186
+#, no-wrap
+msgid ""
+"link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]\n"
+"  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:139
+#, no-wrap
+msgid "`2M`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:144
+#, no-wrap
+msgid ""
+"[[quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.foreground-validation-interval]]`link:#quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.foreground-validation-interval[quarkus.datasource.\"datasource-name\".jdbc.foreground-validation-interval]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Perform foreground validation on connections that have been idle for longer than the specified interval.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:154
+#, no-wrap
+msgid ""
+"[[quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.acquisition-timeout]]`link:#quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.acquisition-timeout[quarkus.datasource.\"datasource-name\".jdbc.acquisition-timeout]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The timeout before cancelling the acquisition of a new connection\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:159
+#, no-wrap
+msgid "`5`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:164
+#, no-wrap
+msgid ""
+"[[quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.leak-detection-interval]]`link:#quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.leak-detection-interval[quarkus.datasource.\"datasource-name\".jdbc.leak-detection-interval]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The interval at which we check for connection leaks.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:174
+#, no-wrap
+msgid ""
+"[[quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.idle-removal-interval]]`link:#quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.idle-removal-interval[quarkus.datasource.\"datasource-name\".jdbc.idle-removal-interval]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The interval at which we try to remove idle connections.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:179
+#, no-wrap
+msgid "`5M`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:184
+#, no-wrap
+msgid ""
+"[[quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.max-lifetime]]`link:#quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.max-lifetime[quarkus.datasource.\"datasource-name\".jdbc.max-lifetime]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The max lifetime of a connection.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:194
+#, no-wrap
+msgid ""
+"[[quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.transaction-isolation-level]]`link:#quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.transaction-isolation-level[quarkus.datasource.\"datasource-name\".jdbc.transaction-isolation-level]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The transaction isolation level.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:196
+#, no-wrap
+msgid "`undefined`, `none`, `read-uncommitted`, `read-committed`, `repeatable-read`, `serializable`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:204
+#, no-wrap
+msgid ""
+"[[quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.extended-leak-report]]`link:#quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.extended-leak-report[quarkus.datasource.\"datasource-name\".jdbc.extended-leak-report]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Collect and display extra troubleshooting info on leaked connections.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:208
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:217
+#, no-wrap
+msgid "`false`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:213
+#, no-wrap
+msgid ""
+"[[quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.flush-on-close]]`link:#quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.flush-on-close[quarkus.datasource.\"datasource-name\".jdbc.flush-on-close]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Allows connections to be flushed upon return to the pool. It's not enabled by default.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:222
+#, no-wrap
+msgid ""
+"[[quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.detect-statement-leaks]]`link:#quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.detect-statement-leaks[quarkus.datasource.\"datasource-name\".jdbc.detect-statement-leaks]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"When enabled Agroal will be able to produce a warning when a connection is returned to the pool without the application having closed all open statements. This is unrelated with tracking of open connections. Disable for peak performance, but only when there's high confidence that no leaks are happening.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:231
+#, no-wrap
+msgid ""
+"[[quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.new-connection-sql]]`link:#quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.new-connection-sql[quarkus.datasource.\"datasource-name\".jdbc.new-connection-sql]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Query executed when first using a connection.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:240
+#, no-wrap
+msgid ""
+"[[quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.validation-query-sql]]`link:#quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.validation-query-sql[quarkus.datasource.\"datasource-name\".jdbc.validation-query-sql]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Query executed to validate a connection.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:249
+#, no-wrap
+msgid ""
+"[[quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.pooling-enabled]]`link:#quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.pooling-enabled[quarkus.datasource.\"datasource-name\".jdbc.pooling-enabled]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Disable pooling to prevent reuse of Connections. Use this with when an external pool manages the life-cycle of Connections.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:258
+#, no-wrap
+msgid ""
+"[[quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.transaction-requirement]]`link:#quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.transaction-requirement[quarkus.datasource.\"datasource-name\".jdbc.transaction-requirement]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Require an active transaction when acquiring a connection. Recommended for production. WARNING: Some extensions acquire connections without holding a transaction for things like schema updates and schema validation. Setting this setting to STRICT may lead to failures in those cases.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:260
+#, no-wrap
+msgid "`off`, `warn`, `strict`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:268
+#, no-wrap
+msgid ""
+"[[quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.additional-jdbc-properties-additional-jdbc-properties]]`link:#quarkus-datasource-data-sources-jdbc-build-time-config_quarkus.datasource.-datasource-name-.jdbc.additional-jdbc-properties-additional-jdbc-properties[quarkus.datasource.\"datasource-name\".jdbc.additional-jdbc-properties]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Other unspecified properties to be passed to the JDBC driver when creating new connections.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:269
+#, no-wrap
+msgid "`Map<String,String>`"
+msgstr ""
+
+#. type: Block title
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:275
+#, no-wrap
+msgid "About the Duration format"
+msgstr ""
+
+#. type: delimited block =
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:279
+msgid "The format for durations uses the standard `java.time.Duration` format.  You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc]."
+msgstr "期間のフォーマットは標準の `java.time.Duration` フォーマットを使用します。詳細は link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc] を参照してください。"
+
+#. type: delimited block =
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:283
+msgid "You can also provide duration values starting with a number.  In this case, if the value consists only of a number, the converter treats the value as seconds.  Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format."
+msgstr "数値で始まる期間の値を指定することもできます。この場合、値が数値のみで構成されている場合、コンバーターは値を秒として扱います。そうでない場合は、 `PT` が暗黙的に値の前に付加され、標準の `java.time.Duration` 形式が得られます。"
