Apply translation memory

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-logging-json-config-group-json-log-config-json-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-logging-json-config-group-json-log-config-json-config.adoc.po
@@ -19,7 +19,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_generated-config/main/config/quarkus-logging-json-config-group-json-log-config-json-config.adoc:3
 msgid "icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime"
-msgstr ""
+msgstr "icon:lock[title=ビルド時に固定] ビルド時に固定される設定プロパティ - その他の設定プロパティはランタイムでオーバーライド可能です。"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-logging-json-config-group-json-log-config-json-config.adoc:8
@@ -32,14 +32,14 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-logging-json-config-group-json-log-config-json-config.adoc:116
 #, no-wrap
 msgid "Type"
-msgstr ""
+msgstr "型"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-logging-json-config-group-json-log-config-json-config.adoc:11
 #: upstream/_generated-config/main/config/quarkus-logging-json-config-group-json-log-config-json-config.adoc:118
 #, no-wrap
 msgid "Default"
-msgstr ""
+msgstr "デフォルト"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-logging-json-config-group-json-log-config-json-config.adoc:16
@@ -62,14 +62,14 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-logging-json-config-group-json-log-config-json-config.adoc:180
 #, no-wrap
 msgid "boolean"
-msgstr ""
+msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-logging-json-config-group-json-log-config-json-config.adoc:20
 #: upstream/_generated-config/main/config/quarkus-logging-json-config-group-json-log-config-json-config.adoc:127
 #, no-wrap
 msgid "`true`"
-msgstr ""
+msgstr "`true`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-logging-json-config-group-json-log-config-json-config.adoc:25
@@ -90,7 +90,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-logging-json-config-group-json-log-config-json-config.adoc:183
 #, no-wrap
 msgid "`false`"
-msgstr ""
+msgstr "`false`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-logging-json-config-group-json-log-config-json-config.adoc:34
@@ -117,7 +117,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-logging-json-config-group-json-log-config-json-config.adoc:207
 #, no-wrap
 msgid "string"
-msgstr ""
+msgstr "string"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-logging-json-config-group-json-log-config-json-config.adoc:38
