--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-logging-json-general-config-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-logging-json-general-config-items.adoc.po
@@ -62,14 +62,14 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-logging-json-general-config-items.adoc:180
 #, no-wrap
 msgid "boolean"
-msgstr ""
+msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-logging-json-general-config-items.adoc:20
 #: upstream/_generated-config/main/config/quarkus-logging-json-general-config-items.adoc:127
 #, no-wrap
 msgid "`true`"
-msgstr ""
+msgstr "`true`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-logging-json-general-config-items.adoc:25
@@ -90,7 +90,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-logging-json-general-config-items.adoc:183
 #, no-wrap
 msgid "`false`"
-msgstr ""
+msgstr "`false`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-logging-json-general-config-items.adoc:34
