--- a/l10n/po/ja_JP/_versions/main/guides/building-native-image.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/building-native-image.adoc.po
@@ -452,7 +452,7 @@ msgstr ""
 #: upstream/_versions/main/guides/building-native-image.adoc:274
 #, no-wrap
 msgid "Profiles"
-msgstr ""
+msgstr "プロファイル"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/building-native-image.adoc:276
