--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-agroal-config-group-data-sources-jdbc-build-time-config-data-source-jdbc-outer-named-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-agroal-config-group-data-sources-jdbc-build-time-config-data-source-jdbc-outer-named-build-time-config.adoc.po
@@ -335,7 +335,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-agroal-config-group-data-sources-jdbc-build-time-config-data-source-jdbc-outer-named-build-time-config.adoc:174
 #, no-wrap
 msgid "`false`"
-msgstr ""
+msgstr "`false`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-agroal-config-group-data-sources-jdbc-build-time-config-data-source-jdbc-outer-named-build-time-config.adoc:170
@@ -437,7 +437,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-agroal-config-group-data-sources-jdbc-build-time-config-data-source-jdbc-outer-named-build-time-config.adoc:232
 #, no-wrap
 msgid "About the Duration format"
-msgstr ""
+msgstr "期間フォーマットについて"
 
 #. type: delimited block =
 #: upstream/_generated-config/main/config/quarkus-agroal-config-group-data-sources-jdbc-build-time-config-data-source-jdbc-outer-named-build-time-config.adoc:236
