--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc.po
@@ -398,7 +398,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:217
 #, no-wrap
 msgid "`false`"
-msgstr ""
+msgstr "`false`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:213
@@ -500,7 +500,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:275
 #, no-wrap
 msgid "About the Duration format"
-msgstr ""
+msgstr "期間フォーマットについて"
 
 #. type: delimited block =
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-jdbc-build-time-config.adoc:279
