Apply translation memory

--- a/l10n/po/ja_JP/_versions/main/guides/kotlin.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/kotlin.adoc.po
@@ -615,7 +615,7 @@ msgstr ""
 #: upstream/_versions/main/guides/kotlin.adoc:336
 #, no-wrap
 msgid "Maven"
-msgstr ""
+msgstr "Maven"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/kotlin.adoc:342
@@ -657,7 +657,7 @@ msgstr ""
 #: upstream/_versions/main/guides/kotlin.adoc:360
 #, no-wrap
 msgid "Gradle (Groovy DSL)"
-msgstr ""
+msgstr "Gradle (Groovy DSL)"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/kotlin.adoc:367
@@ -674,7 +674,7 @@ msgstr ""
 #: upstream/_versions/main/guides/kotlin.adoc:370
 #, no-wrap
 msgid "Gradle (Kotlin DSL)"
-msgstr ""
+msgstr "Gradle (Kotlin DSL)"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/kotlin.adoc:377
