Update .po files

--- a/l10n/po/ja_JP/_guides/security-openid-connect-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-client.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-04-19 17:18+0000\n"
+"POT-Creation-Date: 2022-05-17 15:05+0000\n"
 "PO-Revision-Date: 2021-04-30 16:54+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1532,7 +1532,7 @@ msgstr "Keycloak"
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-client.adoc:775
 #, fuzzy
-msgid "If you work with Keycloak then you can use the same approach as described in the xref:security-openid-connect#integration-testing-keycloak.adoc[OpenID Connect Bearer Token Integration testing] `Keycloak` section."
+msgid "If you work with Keycloak then you can use the same approach as described in the xref:security-openid-connect#integration-testing-keycloak.adoc[OpenID Connect Bearer Token Integration testing] Keycloak section."
 msgstr "Keycloakを使用している場合は、 link:security-openid-connect.html#integration-testing-keycloak.adoc[OpenID Connect Bearer Token Integration testing] `Keycloak` のセクションで説明されているのと同じ方法を使用できます。"
 
 #. type: Title ===
