--- a/l10n/po/ja_JP/_guides/security-openid-connect-dev-services.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-dev-services.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-04-12 10:10+0000\n"
+"POT-Creation-Date: 2022-05-17 15:05+0000\n"
 "PO-Revision-Date: 2022-04-12 11:20+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -111,7 +111,7 @@ msgstr "なお、 `quarkus.keycloak.devservices.shared=false` でコンテナの
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-dev-services.adoc:56
 #, fuzzy
-msgid "Now open the main link:http://localhost:8080/q/dev[Dev UI page] and you will see the `OpenID Connect Card` linking to a `Keycloak` page:"
+msgid "Now open the main link:http://localhost:8080/q/dev[Dev UI page] and you will see the `OpenID Connect Card` linking to a Keycloak page:"
 msgstr "次にメインの link:http://localhost:8080/q/dev[Dev UIページ]を開くと、 `OpenID Connect Card` が `Keycloak` ページにリンクしているのがわかります。"
 
 #. type: Named 'alt' AttributeList argument for macro 'image'
