--- a/l10n/po/ja_JP/_guides/writing-extensions.adoc.po
+++ b/l10n/po/ja_JP/_guides/writing-extensions.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-05-11 10:12+0000\n"
+"POT-Creation-Date: 2022-05-17 15:05+0000\n"
 "PO-Revision-Date: 2022-05-06 11:09+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1081,7 +1081,9 @@ msgstr "Gradleの使用"
 
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:550
-msgid "You will need to apply the `io.quarkus.extension` plugin in the `runtime` module of your extension project.  The plugin includes the `extensionDescriptor` task that will generate `META-INF/quarkus-extension.properties` and `META-INF/quarkus-extension.yml` files.  The plugin also enables the `io.quarkus:quarkus-extension-processor` annotation processor in both `deployment` and `runtime` modules.  The name of the deployment module can be configured in the plugin by setting the `deploymentArtifact` property. The property is set to `deployment` by default:"
+#, fuzzy
+#| msgid "You will need to apply the `io.quarkus.extension` plugin in the `runtime` module of your extension project.  The plugin includes the `extensionDescriptor` task that will generate `META-INF/quarkus-extension.properties` and `META-INF/quarkus-extension.yml` files.  The plugin also enables the `io.quarkus:quarkus-extension-processor` annotation processor in both `deployment` and `runtime` modules.  The name of the deployment module can be configured in the plugin by setting the `deploymentArtifact` property. The property is set to `deployment` by default:"
+msgid "You will need to apply the `io.quarkus.extension` plugin in the `runtime` module of your extension project.  The plugin includes the `extensionDescriptor` task that will generate `META-INF/quarkus-extension.properties` and `META-INF/quarkus-extension.yml` files.  The plugin also enables the `io.quarkus:quarkus-extension-processor` annotation processor in both `deployment` and `runtime` modules.  The name of the deployment module can be configured in the plugin by setting the `deploymentModule` property. The property is set to `deployment` by default:"
 msgstr "エクステンションプロジェクトの `runtime` モジュールに `io.quarkus.extension` プラグインを適用する必要があります。このプラグインには、 `META-INF/quarkus-extension.properties` と `META-INF/quarkus-extension.yml` のファイルを生成する `extensionDescriptor` タスクが含まれています。また、このプラグインは `deployment` と `runtime` の両方のモジュールで `io.quarkus:quarkus-extension-processor` アノテーションプロセッサを有効にします。デプロイメントモジュールの名前は、プラグインで `deploymentArtifact` プロパティを設定することで設定できます。このプロパティは、デフォルトでは `deployment` に設定されています。"
 
 #. type: delimited block -
@@ -1099,7 +1101,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "quarkusExtension {\n"
-"    deploymentArtifact = 'deployment'\n"
+"    deploymentModule = 'deployment'\n"
 "}\n"
 msgstr ""
 
@@ -6189,7 +6191,7 @@ msgstr "`name`"
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:3129
 #, fuzzy
-msgid "`description` (unless you have it already set in the `runtime/pom.xml`'s `<description>` element, which is the recommended approach)"
+msgid "`description` (unless you have it already set in the ``runtime/pom.xml``'s `<description>` element, which is the recommended approach)"
 msgstr "`description` (推奨されるアプローチである、 `runtime/pom.xml` の `<description>` 要素にセット、がされていない限り)"
 
 #. type: Plain text
