--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-jacoco.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-jacoco.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-10-06 08:04+0000\n"
+"POT-Creation-Date: 2022-05-17 15:13+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -57,7 +57,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-jacoco.adoc:53
 #: upstream/_generated-config/latest/config/quarkus-jacoco.adoc:62
 #: upstream/_generated-config/latest/config/quarkus-jacoco.adoc:71
-#: upstream/_generated-config/latest/config/quarkus-jacoco.adoc:98
+#: upstream/_generated-config/latest/config/quarkus-jacoco.adoc:106
 #, no-wrap
 msgid "string"
 msgstr "string"
@@ -167,44 +167,52 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/latest/config/quarkus-jacoco.adoc:79
+#: upstream/_generated-config/latest/config/quarkus-jacoco.adoc:83
 #, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus.jacoco.includes]]`link:#quarkus-jacoco_quarkus.jacoco.includes[quarkus.jacoco.includes]`\n"
 "\n"
 "[.description]\n"
 "--\n"
-"A list of class files to include in the report. May use wildcard characters (++*++ and ?). When not specified everything will be included.\n"
+"A list of class files to include in the report. May use wildcard characters (++*++ and ?). When not specified everything will be included. \n"
+" For instance:  \n"
+" - `++**++/fo/++**++/++*++` targets all classes under fo and sub packages \n"
+" - `++**++/bar/++*++` targets all classes directly under bar \n"
+" - `++**++/++*++BAR++*++.class` targets classes that contain BAR in their name regardless of path\n"
 "--"
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/latest/config/quarkus-jacoco.adoc:80
-#: upstream/_generated-config/latest/config/quarkus-jacoco.adoc:89
+#: upstream/_generated-config/latest/config/quarkus-jacoco.adoc:84
+#: upstream/_generated-config/latest/config/quarkus-jacoco.adoc:97
 #, no-wrap
 msgid "list of string"
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/latest/config/quarkus-jacoco.adoc:83
+#: upstream/_generated-config/latest/config/quarkus-jacoco.adoc:87
 #, no-wrap
 msgid "`**`"
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/latest/config/quarkus-jacoco.adoc:88
+#: upstream/_generated-config/latest/config/quarkus-jacoco.adoc:96
 #, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus.jacoco.excludes]]`link:#quarkus-jacoco_quarkus.jacoco.excludes[quarkus.jacoco.excludes]`\n"
 "\n"
 "[.description]\n"
 "--\n"
-"A list of class files to exclude from the report. May use wildcard characters (++*++ and ?). When not specified nothing will be excluded.\n"
+"A list of class files to exclude from the report. May use wildcard characters (++*++ and ?). When not specified nothing will be excluded. \n"
+" For instance:  \n"
+" - `++**++/fo/++**++/++*++` targets all classes under fo and sub packages \n"
+" - `++**++/bar/++*++` targets all classes directly under bar \n"
+" - `++**++/++*++BAR++*++.class` targets classes that contain BAR in their name regardless of path\n"
 "--"
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/latest/config/quarkus-jacoco.adoc:97
+#: upstream/_generated-config/latest/config/quarkus-jacoco.adoc:105
 #, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-jacoco_quarkus.jacoco.report-location]]`link:#quarkus-jacoco_quarkus.jacoco.report-location[quarkus.jacoco.report-location]`\n"
@@ -216,7 +224,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/latest/config/quarkus-jacoco.adoc:100
+#: upstream/_generated-config/latest/config/quarkus-jacoco.adoc:108
 #, no-wrap
 msgid "`jacoco-report`"
 msgstr ""
