--- a/l10n/po/ja_JP/_guides/security-jwt.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-jwt.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-05-06 18:13+0000\n"
+"POT-Creation-Date: 2022-05-17 15:05+0000\n"
 "PO-Revision-Date: 2022-04-12 11:33+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1482,7 +1482,7 @@ msgstr "Keycloak"
 #. type: Plain text
 #: upstream/_guides/security-jwt.adoc:809
 #, fuzzy
-msgid "If you work with Keycloak and configure `mp.jwt.verify.publickey.location` to point to HTTPS or HTTP based JsonWebKey (JWK) set then you can use the same approach as described in the xref:security-openid-connect.adoc#integration-testing-keycloak[OpenID Connect Bearer Token Integration testing] `Keycloak` section but only change the `application.properties` to use MP JWT configuration properties instead:"
+msgid "If you work with Keycloak and configure `mp.jwt.verify.publickey.location` to point to HTTPS or HTTP based JsonWebKey (JWK) set then you can use the same approach as described in the xref:security-openid-connect.adoc#integration-testing-keycloak[OpenID Connect Bearer Token Integration testing] Keycloak section but only change the `application.properties` to use MP JWT configuration properties instead:"
 msgstr "Keycloakを使用し、HTTPSまたはHTTPベースのJsonWebKey（JWK）セットを指すように `mp.jwt.verify.publickey.location` を設定している場合は、 link:security-openid-connect.html#integration-testing-keycloak[OpenID Connect Bearer Token Integration testing] `Keycloak` のセクションで説明したのと同じ方法を使用できますが、 `application.properties` を変更して、代わりにMP JWTの構成プロパティを使用するだけです。"
 
 #. type: Title ====
