Apply translation memory

--- a/l10n/po/ja_JP/_guides/kotlin.adoc.po
+++ b/l10n/po/ja_JP/_guides/kotlin.adoc.po
@@ -605,7 +605,7 @@ msgstr ""
 #: upstream/_guides/kotlin.adoc:336
 #, no-wrap
 msgid "Maven"
-msgstr ""
+msgstr "Maven"
 
 #. type: delimited block -
 #: upstream/_guides/kotlin.adoc:342
@@ -647,7 +647,7 @@ msgstr ""
 #: upstream/_guides/kotlin.adoc:360
 #, no-wrap
 msgid "Gradle (Groovy DSL)"
-msgstr ""
+msgstr "Gradle (Groovy DSL)"
 
 #. type: delimited block -
 #: upstream/_guides/kotlin.adoc:367
