--- a/l10n/po/ja_JP/_guides/security-openid-connect-providers.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-providers.adoc.po
@@ -71,7 +71,7 @@ msgstr "著名なプロバイダー"
 #: upstream/_guides/security-openid-connect-providers.adoc:24
 #, no-wrap
 msgid "GitHub"
-msgstr ""
+msgstr "GitHub"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-providers.adoc:27
