Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-docker-docker-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-docker-docker-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-03-09 02:29+0000\n"
+"POT-Creation-Date: 2022-05-18 02:45+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -29,12 +29,14 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-docker-docker-config.adoc:9
+#: upstream/_generated-config/main/config/quarkus-docker-docker-config.adoc:68
 #, no-wrap
 msgid "Type"
 msgstr "タイプ"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-docker-docker-config.adoc:11
+#: upstream/_generated-config/main/config/quarkus-docker-docker-config.adoc:70
 #, no-wrap
 msgid "Default"
 msgstr "デフォルト"
@@ -56,6 +58,8 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-docker-docker-config.adoc:26
 #: upstream/_generated-config/main/config/quarkus-docker-docker-config.adoc:44
 #: upstream/_generated-config/main/config/quarkus-docker-docker-config.adoc:53
+#: upstream/_generated-config/main/config/quarkus-docker-docker-config.adoc:85
+#: upstream/_generated-config/main/config/quarkus-docker-docker-config.adoc:94
 #, no-wrap
 msgid "string"
 msgstr "string"
@@ -86,6 +90,7 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-docker-docker-config.adoc:35
+#: upstream/_generated-config/main/config/quarkus-docker-docker-config.adoc:76
 #, no-wrap
 msgid "list of string"
 msgstr ""
@@ -136,4 +141,46 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-docker-docker-config.adoc:62
 #, no-wrap
 msgid "`Map<String,String>`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-docker-docker-config.adoc:67
+#, no-wrap
+msgid "[[quarkus-docker-docker-config_quarkus.docker.buildx-configuration-for-docker-buildx-options]]link:#quarkus-docker-docker-config_quarkus.docker.buildx-configuration-for-docker-buildx-options[Configuration for Docker Buildx options]"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-docker-docker-config.adoc:75
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-docker-docker-config_quarkus.docker.buildx.platform]]`link:#quarkus-docker-docker-config_quarkus.docker.buildx.platform[quarkus.docker.buildx.platform]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Which platform(s) to target during the build. See https://docs.docker.com/engine/reference/commandline/buildx_build/++#++platform\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-docker-docker-config.adoc:84
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-docker-docker-config_quarkus.docker.buildx.output]]`link:#quarkus-docker-docker-config_quarkus.docker.buildx.output[quarkus.docker.buildx.output]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Sets the export action for the build result. See https://docs.docker.com/engine/reference/commandline/buildx_build/++#++output. Note that any filesystem paths need to be absolute paths, not relative from where the command is executed from.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-docker-docker-config.adoc:93
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-docker-docker-config_quarkus.docker.buildx.progress]]`link:#quarkus-docker-docker-config_quarkus.docker.buildx.progress[quarkus.docker.buildx.progress]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Set type of progress output (`auto`, `plain`, `tty`). Use `plain` to show container output (default “`auto`”). See https://docs.docker.com/engine/reference/commandline/buildx_build/++#++progress\n"
+"--"
 msgstr ""
