--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-05-12 02:42+0000\n"
+"POT-Creation-Date: 2022-05-18 02:43+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -68,6 +68,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc:171
 #: upstream/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc:180
 #: upstream/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc:234
+#: upstream/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc:243
 #, no-wrap
 msgid "string"
 msgstr "string"
@@ -391,5 +392,17 @@ msgid ""
 "[.description]\n"
 "--\n"
 "Set the HTTP client name, used when the client is shared, otherwise ignored. This property is applicable to reactive REST clients only.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc:242
+#, no-wrap
+msgid ""
+"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.user-agent]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.user-agent[quarkus.rest-client.\"config-key\".user-agent]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Configure the HTTP user-agent header to use. This property is applicable to reactive REST clients only.\n"
 "--"
 msgstr ""
