--- a/l10n/po/ja_JP/_versions/main/guides/security-webauthn.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-webauthn.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-03-25 02:33+0000\n"
+"POT-Creation-Date: 2022-05-18 02:49+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1423,7 +1423,6 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_versions/main/guides/security-webauthn.adoc:868
-#: upstream/_versions/main/guides/security-webauthn.adoc:891
 #, no-wrap
 msgid "Only invoke the registration challenge and authenticator"
 msgstr "登録チャレンジと認証デバイスのみを呼出"
@@ -1451,6 +1450,13 @@ msgid ""
 "  });\n"
 msgstr ""
 
+#. type: Title ===
+#: upstream/_versions/main/guides/security-webauthn.adoc:891
+#, fuzzy, no-wrap
+#| msgid "Only invoke the registration challenge and authenticator"
+msgid "Only invoke the login challenge and authenticator"
+msgstr "登録チャレンジと認証デバイスのみを呼出"
+
 #. type: Plain text
 #: upstream/_versions/main/guides/security-webauthn.adoc:897
 msgid "The `webAuthn.loginOnly` method invokes the login challenge endpoint, then calls the authenticator and returns a https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise[Promise object] containing a JSON object suitable for being sent to the callback endpoint. You can use that JSON object in order to store the credentials in hidden form `input` elements, for example, and send it as part of a regular HTML form:"
@@ -1460,7 +1466,7 @@ msgstr "`webAuthn.loginOnly` メソッドはログインチャレンジのエン
 #: upstream/_versions/main/guides/security-webauthn.adoc:914
 #, no-wrap
 msgid ""
-"webAuthn.login({ name: userName })\n"
+"webAuthn.loginOnly({ name: userName })\n"
 "  .then(body => {\n"
 "    // store the login JSON in form elements\n"
 "    document.getElementById('webAuthnId').value = body.id;\n"
