Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/vertx.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/vertx.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-04-07 02:36+0000\n"
+"POT-Creation-Date: 2022-05-19 02:54+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -465,7 +465,16 @@ msgstr "`VertxResource` クラスに以下のメソッドを追加します。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/vertx.adoc:233
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "@GET\n"
+#| "@Path(\"/web\")\n"
+#| "public Uni<JsonArray> retrieveDataFromWikipedia() {                     // <1>\n"
+#| "    return client.getAbs(URL).send()                                    // <2>\n"
+#| "            .onItem().transform(HttpResponse::bodyAsJsonObject)         // <3>\n"
+#| "            .onItem().transform(json -> json.getJsonObject(\"parse\")     // <4>\n"
+#| "                                        .getJsonArray(\"langlinks\"));\n"
+#| "}\n"
 msgid ""
 "@GET\n"
 "@Path(\"/book\")\n"
@@ -474,10 +483,18 @@ msgid ""
 "                    new OpenOptions().setRead(true)\n"
 "            )\n"
 "            .onItem().transformToMulti(file -> file.toMulti())                       // <3>\n"
-"            .onItem().transform(content -> content.toString(StandardCharsets.UTF_8)) // <4>\n"
+"            .onItem().transform(content -> content.toString(StandardCharsets.UTF_8) // <4>\n"
 "                    + \"\\n------------\\n\");                                           // <5>\n"
 "}\n"
 msgstr ""
+"@GET\n"
+"@Path(\"/web\")\n"
+"public Uni<JsonArray> retrieveDataFromWikipedia() {                     // <1>\n"
+"    return client.getAbs(URL).send()                                    // <2>\n"
+"            .onItem().transform(HttpResponse::bodyAsJsonObject)         // <3>\n"
+"            .onItem().transform(json -> json.getJsonObject(\"parse\")     // <4>\n"
+"                                        .getJsonArray(\"langlinks\"));\n"
+"}\n"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx.adoc:235
