Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.7/guides/spring-di.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/spring-di.adoc.po
@@ -561,37 +561,37 @@ msgstr "Comments"
 #: upstream/_versions/1.7/guides/spring-di.adoc:288
 #, no-wrap
 msgid "@Autowired"
-msgstr ""
+msgstr "@Autowired"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-di.adoc:289
 #, no-wrap
 msgid "@Inject"
-msgstr ""
+msgstr "@Inject"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-di.adoc:292
 #, no-wrap
 msgid "@Qualifier"
-msgstr ""
+msgstr "@Qualifier"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-di.adoc:293
 #, no-wrap
 msgid "@Named"
-msgstr ""
+msgstr "@Named"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-di.adoc:296
 #, no-wrap
 msgid "@Value"
-msgstr ""
+msgstr "@Value"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-di.adoc:297
 #, no-wrap
 msgid "@ConfigProperty"
-msgstr ""
+msgstr "@ConfigProperty"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-di.adoc:299
@@ -603,7 +603,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/spring-di.adoc:300
 #, no-wrap
 msgid "@Component"
-msgstr ""
+msgstr "@Component"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-di.adoc:301
@@ -611,7 +611,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/spring-di.adoc:309
 #, no-wrap
 msgid "@Singleton"
-msgstr ""
+msgstr "@Singleton"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-di.adoc:303
@@ -625,25 +625,25 @@ msgstr ""
 #: upstream/_versions/1.7/guides/spring-di.adoc:304
 #, no-wrap
 msgid "@Service"
-msgstr ""
+msgstr "@Service"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-di.adoc:308
 #, no-wrap
 msgid "@Repository"
-msgstr ""
+msgstr "@Repository"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-di.adoc:312
 #, no-wrap
 msgid "@Configuration"
-msgstr ""
+msgstr "@Configuration"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-di.adoc:313
 #, no-wrap
 msgid "@ApplicationScoped"
-msgstr ""
+msgstr "@ApplicationScoped"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-di.adoc:315
@@ -655,19 +655,19 @@ msgstr ""
 #: upstream/_versions/1.7/guides/spring-di.adoc:316
 #, no-wrap
 msgid "@Bean"
-msgstr ""
+msgstr "@Bean"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-di.adoc:317
 #, no-wrap
 msgid "@Produces"
-msgstr ""
+msgstr "@Produces"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-di.adoc:320
 #, no-wrap
 msgid "@Scope"
-msgstr ""
+msgstr "@Scope"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/spring-di.adoc:322
