--- a/l10n/po/ja_JP/_versions/2.7/guides/smallrye-graphql.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.7/guides/smallrye-graphql.adoc.po
@@ -23,7 +23,7 @@ msgstr ""
 #: upstream/_versions/2.7/guides/smallrye-graphql.adoc:6
 #, no-wrap
 msgid "SmallRye GraphQL"
-msgstr ""
+msgstr "SmallRye GraphQL"
 
 #. type: Plain text
 #: upstream/_versions/2.7/guides/smallrye-graphql.adoc:12
@@ -132,7 +132,7 @@ msgstr "まず、新しいプロジェクトが必要です。以下のコマン
 #. type: quote
 #: upstream/_versions/2.7/guides/smallrye-graphql.adoc:68
 msgid "This command generates a project, importing the `smallrye-graphql` extension."
-msgstr ""
+msgstr "このコマンドは、 `smallrye-graphql` エクステンションをインポートした Maven プロジェクトを生成します。"
 
 #. type: quote
 #: upstream/_versions/2.7/guides/smallrye-graphql.adoc:71
@@ -975,17 +975,17 @@ msgstr "`createHero` の mutation 法と同様に、 `{ }` で定義されてい
 #: upstream/_versions/2.7/guides/smallrye-graphql.adoc:570
 #, no-wrap
 msgid "Subscriptions"
-msgstr ""
+msgstr "サブスクリプション"
 
 #. type: Plain text
 #: upstream/_versions/2.7/guides/smallrye-graphql.adoc:573
 msgid "Subscriptions allows you to subscribe to a query. It allows you to receive events."
-msgstr ""
+msgstr "サブスクリプションでは、クエリを購読することができます。イベントを受信することができます。"
 
 #. type: Plain text
 #: upstream/_versions/2.7/guides/smallrye-graphql.adoc:575
 msgid "Subscription is currently still considered experimental."
-msgstr ""
+msgstr "サブスクリプションは現在、まだ実験的なものとされています。"
 
 #. type: Plain text
 #: upstream/_versions/2.7/guides/smallrye-graphql.adoc:577
