--- a/l10n/po/ja_JP/_versions/main/guides/smallrye-health.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/smallrye-health.adoc.po
@@ -386,7 +386,7 @@ msgstr "レディネス・ヘルスチェック手順の追加"
 #. type: Plain text
 #: upstream/_versions/main/guides/smallrye-health.adoc:202
 msgid "The third and final type of health check procedures is startup. Startup procedures are defined as an option for slow starting containers (should not be needed in Quarkus) to delay the invocations of liveness probe which will take over from startup once the startup responds UP for the first time. Startup health checks are defined with the `@Startup` qualifier."
-msgstr ""
+msgstr "ヘルスチェックプロシージャの最後の3つ目のタイプはスタートアップです。スタートアッププロシージャは、起動が遅いコンテナ（Quarkusでは必要ないはず）のオプションとして定義されており、起動が初めてUPに応答すると起動から引き継がれるliveness probeの呼び出しを遅らせることができます。スタートアップのヘルスチェックは、 `@Startup` で定義されます。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/smallrye-health.adoc:204
@@ -690,7 +690,7 @@ msgstr "一部のエクステンションでは、デフォルトのヘルスチ
 #. type: Plain text
 #: upstream/_versions/main/guides/smallrye-health.adoc:396
 msgid "For example, `quarkus-agroal` that is used to manage Quarkus datasource(s) automatically register a readiness health check that will validate each datasources: xref:datasource.adoc#datasource-health-check[Datasource Health Check]."
-msgstr ""
+msgstr "例えば、Quarkusのデータソースを管理するために使用される `quarkus-agroal` は、各 link:datasource.html#datasource-health-check[データソースのヘルスチェック]を検証するReadinessのヘルスチェックを自動的に登録します。 。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/smallrye-health.adoc:398
