--- a/l10n/po/ja_JP/_versions/2.2/guides/spring-di.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/spring-di.adoc.po
@@ -566,37 +566,37 @@ msgstr "Comments"
 #: upstream/_versions/2.2/guides/spring-di.adoc:289
 #, no-wrap
 msgid "@Autowired"
-msgstr ""
+msgstr "@Autowired"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/spring-di.adoc:290
 #, no-wrap
 msgid "@Inject"
-msgstr ""
+msgstr "@Inject"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/spring-di.adoc:293
 #, no-wrap
 msgid "@Qualifier"
-msgstr ""
+msgstr "@Qualifier"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/spring-di.adoc:294
 #, no-wrap
 msgid "@Named"
-msgstr ""
+msgstr "@Named"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/spring-di.adoc:297
 #, no-wrap
 msgid "@Value"
-msgstr ""
+msgstr "@Value"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/spring-di.adoc:298
 #, no-wrap
 msgid "@ConfigProperty"
-msgstr ""
+msgstr "@ConfigProperty"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/spring-di.adoc:300
@@ -608,7 +608,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/spring-di.adoc:301
 #, no-wrap
 msgid "@Component"
-msgstr ""
+msgstr "@Component"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/spring-di.adoc:302
@@ -616,7 +616,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/spring-di.adoc:310
 #, no-wrap
 msgid "@Singleton"
-msgstr ""
+msgstr "@Singleton"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/spring-di.adoc:304
@@ -630,25 +630,25 @@ msgstr ""
 #: upstream/_versions/2.2/guides/spring-di.adoc:305
 #, no-wrap
 msgid "@Service"
-msgstr ""
+msgstr "@Service"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/spring-di.adoc:309
 #, no-wrap
 msgid "@Repository"
-msgstr ""
+msgstr "@Repository"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/spring-di.adoc:313
 #, no-wrap
 msgid "@Configuration"
-msgstr ""
+msgstr "@Configuration"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/spring-di.adoc:314
 #, no-wrap
 msgid "@ApplicationScoped"
-msgstr ""
+msgstr "@ApplicationScoped"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/spring-di.adoc:316
@@ -660,19 +660,19 @@ msgstr ""
 #: upstream/_versions/2.2/guides/spring-di.adoc:317
 #, no-wrap
 msgid "@Bean"
-msgstr ""
+msgstr "@Bean"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/spring-di.adoc:318
 #, no-wrap
 msgid "@Produces"
-msgstr ""
+msgstr "@Produces"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/spring-di.adoc:321
 #, no-wrap
 msgid "@Scope"
-msgstr ""
+msgstr "@Scope"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/spring-di.adoc:324
@@ -684,7 +684,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/spring-di.adoc:325
 #, no-wrap
 msgid "@ComponentScan"
-msgstr ""
+msgstr "@ComponentScan"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/spring-di.adoc:328
@@ -696,7 +696,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/spring-di.adoc:329
 #, no-wrap
 msgid "@Import"
-msgstr ""
+msgstr "@Import"
 
 #. type: Table
 #: upstream/_versions/2.2/guides/spring-di.adoc:331
