--- a/l10n/po/ja_JP/_versions/main/guides/smallrye-graphql.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/smallrye-graphql.adoc.po
@@ -23,7 +23,7 @@ msgstr ""
 #: upstream/_versions/main/guides/smallrye-graphql.adoc:6
 #, no-wrap
 msgid "SmallRye GraphQL"
-msgstr ""
+msgstr "SmallRye GraphQL"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/smallrye-graphql.adoc:12
@@ -990,7 +990,7 @@ msgstr "`createHero` の mutation 法と同様に、 `{ }` で定義されてい
 #: upstream/_versions/main/guides/smallrye-graphql.adoc:568
 #, no-wrap
 msgid "Subscriptions"
-msgstr ""
+msgstr "サブスクリプション"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/smallrye-graphql.adoc:572
